--- a/Personal Website/index.html
+++ b/Personal Website/index.html
@@ -291,18 +291,19 @@
             <div class="Projects-box">
                 <img src="images/portfolio1.jpg" alt="">
                 <div class="Projects-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Cloud Resume Project</h4>
+                    <p>Leveraged .</p>
+                    <a href="project1.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
+    <!-- 
 
             <div class="Projects-box">
                 <img src="images/portfolio2.jpg" alt="">
                 <div class="Projects-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="project2.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -311,7 +312,7 @@
                 <div class="Projects-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione.</p>
-                    <a href="project.html"><i class='bx bx-link-external'></i></a>
+                    <a href="project3.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -320,7 +321,7 @@
                 <div class="Projects-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="project4.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -329,7 +330,7 @@
                 <div class="Projects-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="project5.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -338,9 +339,9 @@
                 <div class="Projects-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="project6.html"><i class='bx bx-link-external'></i></a>
                 </div>
-            </div>
+            </div> Professional History section design -->
         </div>
     </section>
            <section class="gallery" id="gallery">
